--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "homepage": "https://github.com/Zyapagetti/wetube-reloaded#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^6.0.7",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
